fixed SIMDGap. - compile under jdk21 or jdk25. - auto add vector module on runtime.